# advent-of-code

./: README.md  generator.sh  pyproject.toml  solita.txt
.github/workflows/: wf.yml
2015/day_1/: not_quite_lisp.py
2015/day_2/: gift_paper.py
2015/day_3/: perfectly_spherical_houses_in_a_vacuum.py
2015/day_4/: advent_coins.py
2015/day_5/: naughty_strings.py
2015/day_6/: fire_hazard.py
2021/day_1/: sonar_sweep.py
2022/day_1/: calories.py  input_sample.txt
2022/day_10/: cathode_ray_tube.py  sample_2.txt
2022/day_11/: monkey_in_the_middle.py
2022/day_12/: hill_climbing_algorithm.py
2022/day_13/: distress_signal.py
2022/day_2/: rock_paper_scissors.py  sample.txt
2022/day_3/: rucksack_reorganization.py
2022/day_4/: camp_cleanup.py
2022/day_5/: sample_2.txt  supply_stacks.py
2022/day_6/: tuning_trouble.py
2022/day_7/: no_space_left_on_device.py  no_space_left_on_device_dict.py  no_space_left_on_device_tree.py
2022/day_8/: treetop_tree_house.py
2022/day_9/: rope_bridge.py
2023/day_1/: trebucket.py
2023/day_12/: hot_springs.py
2023/day_19/: aplenty.py
2023/day_2/: cube_conundrum.py
2023/day_4/: scratchcards.py
2023/day_5/: almanac.py
2023/day_6/: boat_race.py
2023/day_7/: camel_cards.py
2023/day_8/: haunted_wasteland.py
2023/day_9/: mirage_maintenance.py
2024/day_1/: day_1.py
2024/day_2/: day_2.py
2025/day_1/: day_1.py
src/: get_data.py  get_full_path.py  path_setup.py
