[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent calendar of programming puzzles"
authors = ["Gustav Rasmussen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^7.3.0"
ruff = "^0.14.3"
icecream = "^2.1.8"
tqdm = "^4.67.1"
more-itertools = "^10.8.0"
treelib = "^1.8.0"
numpy = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
